--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier src/**.js functions/**.js --write",
+    "format": "prettier \"src/**/*.js\" \"functions/**/*.js\" --write",
     "serve": "firebase serve --only functions",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
