--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^2.6.0",
     "firebase": "^7.2.0",
     "prettier": "^1.18.2",
     "react": "^16.10.2",
