--- a/functions/package.json
+++ b/functions/package.json
@@ -12,8 +12,10 @@
     "node": "8"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "firebase-admin": "^8.0.0",
-    "firebase-functions": "^3.1.0"
+    "firebase-functions": "^3.1.0",
+    "twilio": "^3.37.0"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
